--- a/src/app/home/info/info.component.css
+++ b/src/app/home/info/info.component.css
@@ -5,6 +5,7 @@
     background-image: url('../../../assets/images/crane-for-the-construction-of-a-new-residential-bu-2022-05-06-01-51-49-utc.jpg');
     margin: 0;
     height: 30%;
+    width: 100%;
     display:flex;
     justify-content: center;
     align-items: center;
