--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,10 @@ body {
     height: 100%;
 }
 
+/** {
+    outline: 1px solid #f00 !important;
+  }*/
+
 body {
     font-family: 'Montserrat', Arial, Verdana, Geneva, Tahoma, sans-serif;
     /*background: #3C6767;*/
